update intro demo nb

--- a/intro_demo.ipynb
+++ b/intro_demo.ipynb
@@ -526,12 +526,226 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4aff8894-de97-4ecf-9008-cbdfdee66b92",
+   "metadata": {},
+   "source": [
+    "## `ImageWidget` using zebrafish whole-brain data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1102bdef-3851-44b4-b67d-23929e250bdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tifffile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "586ad593-718b-41e6-ba3d-ffc4d3711c09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load in zebrafish data\n",
+    "movie = tifffile.memmap('/home/clewis7/repos/fastplotlib-scipy2023/fpl-scipy2023-data/neural_data/zfish_vol.tiff')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "475caccd-076a-4e7e-a96a-6cc8dc59e4d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1309, 30, 512, 512)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b0643dd-64c4-4a06-994f-258fbb4b154a",
+   "metadata": {},
+   "source": [
+    "### View each plane in a separate subplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b798e386-d583-4872-9a5b-e100b7a67f0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "17ec1d72a8994cfc8fc0c746e59c643d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "RFBOutputContext()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No config found!\n",
+      "No config found!\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "JupyterOutputContext(children=(JupyterWgpuCanvas(css_height='500px', css_width='600px'), IpywidgetToolBar(chil…"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get a list of txy arrays for each plane\n",
+    "planes = [movie[:, i] for i in range(movie.shape[1])]\n",
+    "\n",
+    "iw = fpl.ImageWidget(\n",
+    "    data=planes,\n",
+    "    grid_plot_kwargs={\"size\": (600, 500), \"controllers\": \"sync\"},\n",
+    "    cmap=\"gnuplot2\"\n",
+    ")\n",
+    "\n",
+    "iw.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3e903b6b-6225-4485-8da0-8a46e6366e4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for subplot in iw.gridplot:\n",
+    "    subplot[\"image_widget_managed\"].cmap.vmin = -0.12\n",
+    "    subplot[\"image_widget_managed\"].cmap.vmax = 2.3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97e1523a-1c05-448a-853b-02d4b9e65776",
+   "metadata": {},
+   "source": [
+    "### Play with setting different window functions\n",
+    "\n",
+    "These can also be given as kwargs to ImageWidget during instantiation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "df50ca13-7f40-4ee5-add8-6774f659b5eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# must be in the form of {dim: (func, window_size)}\n",
+    "iw.window_funcs = {\"t\": (np.mean, 3)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a9ab748f-5b31-4178-a4f1-e05a3ed8ce34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iw.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03aed83b-f62a-4439-9ef5-cf836b8d37b9",
+   "metadata": {},
+   "source": [
+    "## For more examples, please see our talk from SciPy 2023:\n",
+    "\n",
+    "- #### Repo: https://github.com/fastplotlib/fastplotlib-scipy2023\n",
+    "\n",
+    "- #### Talk: https://www.youtube.com/watch?v=Q-UJpAqljsU"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "515834a2-e9e8-4afe-b4e3-b1155889e76d",
+   "id": "a2cdd896-b2c4-4491-989f-bc8102425812",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4521be02-4785-42f8-8259-0f7c14df4356",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-31 16:03:51.829146: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2023-10-31 16:03:51.829175: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2023-10-31 16:03:51.829197: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-10-31 16:03:51.833956: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-10-31 16:03:52.386379: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
+   "source": [
+    "from mesmerize_core.arrays import LazyVideo\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1ffb7a32-6bef-4640-820a-80f869220e81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = Path('/data/kushal/cortex-learning/2p-trial-exps/eaf1/behavior/session1/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "295b9450-a927-4444-b409-3617d75817a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "side_vids = data_path.glob()"
+   ]
   }
  ],
  "metadata": {
