--- a/intro_demo.ipynb
+++ b/intro_demo.ipynb
@@ -585,14 +585,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "b798e386-d583-4872-9a5b-e100b7a67f0b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17ec1d72a8994cfc8fc0c746e59c643d",
+       "model_id": "c332089d9ee84c21a1733f2bb11daa5c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -604,25 +604,12 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No config found!\n",
-      "No config found!\n"
-     ]
-    },
-    {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "JupyterOutputContext(children=(JupyterWgpuCanvas(css_height='500px', css_width='600px'), IpywidgetToolBar(chil…"
+       "JupyterOutputContext(children=(JupyterWgpuCanvas(css_height='500px', css_width='600px'), IpywidgetToolBar(children=(Button(icon='expand-arrows-alt', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='auto-scale scene'), Button(icon='align-center', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='auto-center scene'), ToggleButton(value=True, icon='hand-pointer', layout=Layout(width='auto'), tooltip='panzoom controller'), ToggleButton(value=True, description='1:1', layout=Layout(width='auto'), style=ToggleButtonStyle(font_weight='bold'), tooltip='maintain aspect'), Button(icon='arrow-down', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='y-axis direction'), Button(icon='draw-polygon', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='add PolygonSelector'), ToggleButton(value=False, icon='video', layout=Layout(width='auto'), tooltip='record'), Dropdown(description='Subplots:', layout=Layout(width='200px'), options=('(0, 0)', '(0, 1)', '(0, 2)', '(0, 3)', '(0, 4)', '(0, 5)', '(1, 0)', '(1, 1)', '(1, 2)', '(1, 3)', '(1, 4)', '(1, 5)', '(2, 0)', '(2, 1)', '(2, 2)', '(2, 3)', '(2, 4)', '(2, 5)', '(3, 0)', '(3, 1)', '(3, 2)', '(3, 3)', '(3, 4)', '(3, 5)', '(4, 0)', '(4, 1)', '(4, 2)', '(4, 3)', '(4, 4)', '(4, 5)'), value='(0, 0)'))), IpywidgetImageWidgetToolbar(children=(HBox(children=(Button(icon='adjust', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='reset vmin/vmax'), Button(description='reset', icon='adjust', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='reset vmin/vmax and reset histogram using current frame'), Play(value=0, description='play/pause', interval=10, max=1308), BoundedIntText(value=1, description='Step Size:', layout=Layout(width='150px'), max=1308, min=1, tooltip='set slider step'), BoundedIntText(value=100, description='Speed', layout=Layout(width='150px'), max=1000, min=1, step=50, tooltip='Playback speed, this is NOT framerate.\\nArbitrary units between 1 - 1,000'))), IntSlider(value=0, description='dimension: t', max=1308)))))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,15 +621,16 @@
     "iw = fpl.ImageWidget(\n",
     "    data=planes,\n",
     "    grid_plot_kwargs={\"size\": (600, 500), \"controllers\": \"sync\"},\n",
-    "    cmap=\"gnuplot2\"\n",
+    "    cmap=\"gnuplot2\",\n",
+    "    histogram_widget=False\n",
     ")\n",
     "\n",
-    "iw.show()"
+    "iw.show(sidecar=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "3e903b6b-6225-4485-8da0-8a46e6366e4f",
    "metadata": {},
    "outputs": [],
@@ -688,7 +676,7 @@
    "id": "03aed83b-f62a-4439-9ef5-cf836b8d37b9",
    "metadata": {},
    "source": [
-    "## For more examples, please see our talk from SciPy 2023:\n",
+    "## For more introductory examples, please see our talk from SciPy 2023:\n",
     "\n",
     "- #### Repo: https://github.com/fastplotlib/fastplotlib-scipy2023\n",
     "\n",
@@ -698,54 +686,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2cdd896-b2c4-4491-989f-bc8102425812",
+   "id": "20207023-fd1c-4be8-9fee-0cac801495ff",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "4521be02-4785-42f8-8259-0f7c14df4356",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-10-31 16:03:51.829146: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2023-10-31 16:03:51.829175: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2023-10-31 16:03:51.829197: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-10-31 16:03:51.833956: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-10-31 16:03:52.386379: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    }
-   ],
-   "source": [
-    "from mesmerize_core.arrays import LazyVideo\n",
-    "from pathlib import Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "1ffb7a32-6bef-4640-820a-80f869220e81",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_path = Path('/data/kushal/cortex-learning/2p-trial-exps/eaf1/behavior/session1/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "295b9450-a927-4444-b409-3617d75817a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "side_vids = data_path.glob()"
-   ]
   }
  ],
  "metadata": {
