--- a/intro_demo.ipynb
+++ b/intro_demo.ipynb
@@ -83,7 +83,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2213c51d42434c17882fb9479aa72f9c",
+       "model_id": "b4f0e40dda7042218370a635ab195a67",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,7 +99,7 @@
      "output_type": "stream",
      "text": [
       "No config found!\n",
-      "No config found!\n"
+      "EGL says it can present to the window but not natively\n"
      ]
     },
     {
@@ -245,14 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "1627ca14-af3b-4538-bddf-26c948a69277",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "667f830717ed4e8a81e4361665df08ba",
+       "model_id": "d5990717f6fd4ca8bafdde9a53e798e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -264,12 +264,20 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/clewis7/repos/fastplotlib/fastplotlib/graphics/_features/_base.py:34: UserWarning: converting float64 array to float32\n",
+      "  warn(f\"converting {array.dtype} array to float32\")\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "JupyterOutputContext(children=(JupyterWgpuCanvas(css_height='500px', css_width='600px'), IpywidgetToolBar(children=(Button(icon='expand-arrows-alt', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='auto-scale scene'), Button(icon='align-center', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='auto-center scene'), ToggleButton(value=True, icon='hand-pointer', layout=Layout(width='auto'), tooltip='panzoom controller'), ToggleButton(value=True, description='1:1', layout=Layout(width='auto'), style=ToggleButtonStyle(font_weight='bold'), tooltip='maintain aspect'), Button(icon='arrow-down', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='y-axis direction'), Button(icon='draw-polygon', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='add PolygonSelector'), ToggleButton(value=False, icon='video', layout=Layout(width='auto'), tooltip='record')))))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "f2bf1a5e-16e9-44fd-840d-7d3a5fc705b0",
    "metadata": {},
    "outputs": [],
@@ -328,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "44a69922-f259-4f02-879d-fdb83a46203d",
    "metadata": {},
    "outputs": [],
@@ -359,14 +367,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "e79417f4-3aea-466f-9cf3-1e9465559942",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a528001460545c6bb91648333b72787",
+       "model_id": "dc6df21887cf4d24a374c0588433b51d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -383,7 +391,7 @@
        "JupyterOutputContext(children=(JupyterWgpuCanvas(css_width='600px'), IpywidgetToolBar(children=(Button(icon='expand-arrows-alt', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='auto-scale scene'), Button(icon='align-center', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='auto-center scene'), ToggleButton(value=True, icon='hand-pointer', layout=Layout(width='auto'), tooltip='panzoom controller'), ToggleButton(value=True, description='1:1', layout=Layout(width='auto'), style=ToggleButtonStyle(font_weight='bold'), tooltip='maintain aspect'), Button(icon='arrow-up', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='y-axis direction'), Button(icon='draw-polygon', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='add PolygonSelector'), ToggleButton(value=False, icon='video', layout=Layout(width='auto'), tooltip='record')))))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "93ff5cff-a573-40c6-af59-c40e5eacfa81",
    "metadata": {},
    "outputs": [],
@@ -426,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "2efcea16-bc12-4d24-9211-ea3bea0d89ef",
    "metadata": {},
    "outputs": [],
@@ -441,6 +449,19 @@
    "metadata": {},
    "source": [
     "### colormaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "47c061cd-138f-4a4a-850a-8f66497225ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set presence of other graphics to False\n",
+    "plot_l[\"ricker\"].present = False\n",
+    "plot_l[\"cosine\"].present = False\n",
+    "plot_l.auto_scale()"
    ]
   },
   {
@@ -535,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "1102bdef-3851-44b4-b67d-23929e250bdc",
    "metadata": {},
    "outputs": [],
@@ -545,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "586ad593-718b-41e6-ba3d-ffc4d3711c09",
    "metadata": {},
    "outputs": [],
@@ -556,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "475caccd-076a-4e7e-a96a-6cc8dc59e4d8",
    "metadata": {},
    "outputs": [
@@ -566,7 +587,7 @@
        "(1309, 30, 512, 512)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,14 +606,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "b798e386-d583-4872-9a5b-e100b7a67f0b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c332089d9ee84c21a1733f2bb11daa5c",
+       "model_id": "dcb81233165b49478aed3b3ed105c8a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -609,7 +630,7 @@
        "JupyterOutputContext(children=(JupyterWgpuCanvas(css_height='500px', css_width='600px'), IpywidgetToolBar(children=(Button(icon='expand-arrows-alt', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='auto-scale scene'), Button(icon='align-center', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='auto-center scene'), ToggleButton(value=True, icon='hand-pointer', layout=Layout(width='auto'), tooltip='panzoom controller'), ToggleButton(value=True, description='1:1', layout=Layout(width='auto'), style=ToggleButtonStyle(font_weight='bold'), tooltip='maintain aspect'), Button(icon='arrow-down', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='y-axis direction'), Button(icon='draw-polygon', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='add PolygonSelector'), ToggleButton(value=False, icon='video', layout=Layout(width='auto'), tooltip='record'), Dropdown(description='Subplots:', layout=Layout(width='200px'), options=('(0, 0)', '(0, 1)', '(0, 2)', '(0, 3)', '(0, 4)', '(0, 5)', '(1, 0)', '(1, 1)', '(1, 2)', '(1, 3)', '(1, 4)', '(1, 5)', '(2, 0)', '(2, 1)', '(2, 2)', '(2, 3)', '(2, 4)', '(2, 5)', '(3, 0)', '(3, 1)', '(3, 2)', '(3, 3)', '(3, 4)', '(3, 5)', '(4, 0)', '(4, 1)', '(4, 2)', '(4, 3)', '(4, 4)', '(4, 5)'), value='(0, 0)'))), IpywidgetImageWidgetToolbar(children=(HBox(children=(Button(icon='adjust', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='reset vmin/vmax'), Button(description='reset', icon='adjust', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='reset vmin/vmax and reset histogram using current frame'), Play(value=0, description='play/pause', interval=10, max=1308), BoundedIntText(value=1, description='Step Size:', layout=Layout(width='150px'), max=1308, min=1, tooltip='set slider step'), BoundedIntText(value=100, description='Speed', layout=Layout(width='150px'), max=1000, min=1, step=50, tooltip='Playback speed, this is NOT framerate.\\nArbitrary units between 1 - 1,000'))), IntSlider(value=0, description='dimension: t', max=1308)))))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "3e903b6b-6225-4485-8da0-8a46e6366e4f",
    "metadata": {},
    "outputs": [],
@@ -652,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "df50ca13-7f40-4ee5-add8-6774f659b5eb",
    "metadata": {},
    "outputs": [],
@@ -663,8 +684,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "a9ab748f-5b31-4178-a4f1-e05a3ed8ce34",
+   "execution_count": null,
+   "id": "19c4b9cd-3ba8-4a3c-8733-efcd84c2f310",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +694,97 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03aed83b-f62a-4439-9ef5-cf836b8d37b9",
+   "id": "7619e648-27f7-48f6-880d-144d1ff33b93",
+   "metadata": {},
+   "source": [
+    "## Plots can also easily be made in Qt :D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "ffb6ac7e-e0d3-4b7a-93ff-6c498c346433",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%gui qt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "5516579c-9e38-414a-8224-94e0cc497d06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/clewis7/repos/fastplotlib/fastplotlib/graphics/_features/_base.py:34: UserWarning: converting float64 array to float32\n",
+      "  warn(f\"converting {array.dtype} array to float32\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<fastplotlib.layouts._frame._qt_output.QOutputContext at 0x7f3a28796830>"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create another `Plot` instance\n",
+    "gp = fpl.GridPlot(shape=(2,3), size=(600, 500))\n",
+    "\n",
+    "gp.canvas.max_buffered_frames = 1\n",
+    "\n",
+    "# make some random data again\n",
+    "data = np.random.rand(512, 512)\n",
+    "\n",
+    "# plot the data\n",
+    "for subplot in gp:\n",
+    "    subplot.add_image(data=data, name=\"random-image\")\n",
+    "\n",
+    "# a function to update the image_graphic\n",
+    "# a plot will pass its plot instance to the animation function as an arugment\n",
+    "def update_data(plot_instance):\n",
+    "    new_data = np.random.rand(512, 512)\n",
+    "    plot_instance[\"random-image\"].data = new_data\n",
+    "\n",
+    "#add this as an animation function\n",
+    "# plot the data\n",
+    "for subplot in gp:\n",
+    "    subplot.add_animations(update_data)\n",
+    "\n",
+    "gp.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "fff7f945-92ed-4d7e-bbed-202b04d0e589",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gp[0,1][\"random-image\"].cmap = \"viridis\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "dff33014-0167-44d8-af77-f286a4f34ded",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gp.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa154583-976c-409f-a725-01d388439ab7",
    "metadata": {},
    "source": [
     "## For more introductory examples, please see our talk from SciPy 2023:\n",
