--- a/intro_demo.ipynb
+++ b/intro_demo.ipynb
@@ -83,7 +83,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4f0e40dda7042218370a635ab195a67",
+       "model_id": "e886a559f18149bdad9a2fd25b2d6e76",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,7 +99,7 @@
      "output_type": "stream",
      "text": [
       "No config found!\n",
-      "EGL says it can present to the window but not natively\n"
+      "No config found!\n"
      ]
     },
     {
@@ -252,7 +252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5990717f6fd4ca8bafdde9a53e798e2",
+       "model_id": "038d8755da494a1ea80066d241ebcaea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -374,7 +374,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc6df21887cf4d24a374c0588433b51d",
+       "model_id": "0c7e0ffab5fa4e228e54525ad03fca5c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -454,19 +454,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "47c061cd-138f-4a4a-850a-8f66497225ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set presence of other graphics to False\n",
-    "plot_l[\"ricker\"].present = False\n",
-    "plot_l[\"cosine\"].present = False\n",
-    "plot_l.auto_scale()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
    "id": "a81bce05-b4a8-455b-95b2-6fa563087b51",
    "metadata": {},
    "outputs": [],
@@ -477,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "69473735-3c24-4881-bbb2-13e760ea22ea",
    "metadata": {},
    "outputs": [],
@@ -488,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "368abd6e-528b-412e-8be5-1d73aebd4b97",
    "metadata": {},
    "outputs": [],
@@ -498,52 +485,160 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "91a4b3be-d509-4782-a7f3-033dcfd30831",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plot_l.close()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "c024c606-d9e4-4ee3-b0dc-abe7c5706d80",
+   "id": "0248d1e7-d79b-4ec8-9ea3-3d98d3702ca1",
    "metadata": {},
    "source": [
-    "**Qualitative data**"
+    "#### Generate some data, 4 x 4 circles"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "14c9be4e-bc8c-4fb7-adbf-09cf2c8384dd",
-   "metadata": {},
+   "id": "ebce0bc0-be6f-4d00-8dbd-d6ced9e4202e",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# qualitatively set the cmap values\n",
-    "cmap_values = [0] * 25 + [1] * 5 + [2] * 50 + [3] * 20\n",
-    "plot_l[\"sine\"].cmap.values = cmap_values"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9e860ddf-5c4c-46fd-a722-ba42cc965ac9",
-   "metadata": {},
-   "source": [
-    "**Qualitative cmap**"
+    "from itertools import product "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f386cc93-355d-4961-afda-fb72ed3e137e",
-   "metadata": {},
+   "id": "cd6585ac-1cc3-452d-bea0-36be7b7ab055",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# now change the cmap to new cmap with those same cmap values\n",
-    "plot_l[\"sine\"].cmap = \"tab10\""
+    "def make_circle(center, radius: float, n_points: int = 75) -> np.ndarray:\n",
+    "    theta = np.linspace(0, 2 * np.pi, n_points)\n",
+    "    xs = radius * np.sin(theta)\n",
+    "    ys = radius * np.cos(theta)\n",
+    "\n",
+    "    return np.column_stack([xs, ys]) + center\n",
+    "\n",
+    "\n",
+    "spatial_dims = (50, 50)\n",
+    "\n",
+    "# this makes 16 circles, so we can create 16 cmap values, so it will use these values to set the\n",
+    "# color of the line based by using the cmap as a LUT with the corresponding cmap_value\n",
+    "circles = list()\n",
+    "for center in product(range(0, spatial_dims[0], 15), range(0, spatial_dims[1], 15)):\n",
+    "    circles.append(make_circle(center, 5, n_points=75))\n",
+    "\n",
+    "pos_xy = np.vstack(circles)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "701111d3-4ac4-431d-a198-8cdfff2f6d38",
+   "metadata": {},
+   "source": [
+    "### Qualitative cmap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
+   "id": "71baa38e-db6b-4190-bbb3-c4f17560d7c6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dc5581f420a94d79bc061686aa83bb01",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "RFBOutputContext()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "JupyterOutputContext(children=(JupyterWgpuCanvas(css_height='600px', css_width='600px'), IpywidgetToolBar(chil…"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plot = fpl.Plot(size=(600, 600))\n",
+    "\n",
+    "# things like class labels, cluster labels, etc.\n",
+    "cmap_values = [\n",
+    "    0, 1, 1, 2,\n",
+    "    0, 0, 1, 1,\n",
+    "    2, 2, 3, 3,\n",
+    "    1, 1, 1, 5\n",
+    "]\n",
+    "\n",
+    "plot.add_line_collection(\n",
+    "    circles, \n",
+    "    cmap=\"tab10\", \n",
+    "    cmap_values=cmap_values, \n",
+    "    thickness=15\n",
+    ")\n",
+    "\n",
+    "plot.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07cc9454-1109-4e2d-99f6-30e156c4deab",
+   "metadata": {},
+   "source": [
+    "#### Update the cmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "6a9b454e-b0a0-4d3b-a94b-10bdf022648f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plot.graphics[0].cmap = \"terrain\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "7058dca4-9691-466d-9e67-d1235d735089",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_l.close()"
+    "plot.close()"
    ]
   },
   {
@@ -702,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "ffb6ac7e-e0d3-4b7a-93ff-6c498c346433",
    "metadata": {},
    "outputs": [],
@@ -712,64 +807,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "5516579c-9e38-414a-8224-94e0cc497d06",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/clewis7/repos/fastplotlib/fastplotlib/graphics/_features/_base.py:34: UserWarning: converting float64 array to float32\n",
-      "  warn(f\"converting {array.dtype} array to float32\")\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<fastplotlib.layouts._frame._qt_output.QOutputContext at 0x7f3a28796830>"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# create another `Plot` instance\n",
-    "gp = fpl.GridPlot(shape=(2,3), size=(600, 500))\n",
+    "# get a list of txy arrays for each plane\n",
+    "planes = [movie[:, i] for i in range(movie.shape[1])]\n",
     "\n",
-    "gp.canvas.max_buffered_frames = 1\n",
+    "iw = fpl.ImageWidget(\n",
+    "    data=planes,\n",
+    "    grid_plot_kwargs={\"size\": (600, 500), \"controllers\": \"sync\"},\n",
+    "    cmap=\"gnuplot2\",\n",
+    "    histogram_widget=False\n",
+    ")\n",
     "\n",
-    "# make some random data again\n",
-    "data = np.random.rand(512, 512)\n",
-    "\n",
-    "# plot the data\n",
-    "for subplot in gp:\n",
-    "    subplot.add_image(data=data, name=\"random-image\")\n",
-    "\n",
-    "# a function to update the image_graphic\n",
-    "# a plot will pass its plot instance to the animation function as an arugment\n",
-    "def update_data(plot_instance):\n",
-    "    new_data = np.random.rand(512, 512)\n",
-    "    plot_instance[\"random-image\"].data = new_data\n",
-    "\n",
-    "#add this as an animation function\n",
-    "# plot the data\n",
-    "for subplot in gp:\n",
-    "    subplot.add_animations(update_data)\n",
-    "\n",
-    "gp.show()"
+    "iw.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f75f0b38-1e55-46eb-9e09-d94c80ae542b",
+   "metadata": {},
+   "source": [
+    "#### Can interact with subplots and graphics just as above!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "fff7f945-92ed-4d7e-bbed-202b04d0e589",
+   "execution_count": null,
+   "id": "a60c8e51-ff7f-496f-906c-1c8cc7765c42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gp[0,1][\"random-image\"].cmap = \"viridis\""
+    "for subplot in iw.gridplot:\n",
+    "    subplot[\"image_widget_managed\"].cmap.vmin = -0.12\n",
+    "    subplot[\"image_widget_managed\"].cmap.vmax = 2.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88883a2a-6e0c-4d5d-b3b8-8975d5f6ee6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# must be in the form of {dim: (func, window_size)}\n",
+    "iw.window_funcs = {\"t\": (np.mean, 3)}"
    ]
   },
   {
@@ -779,7 +863,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gp.close()"
+    "iw.close()"
    ]
   },
   {
