--- a/intro_demo.ipynb
+++ b/intro_demo.ipynb
@@ -92,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a142b20790034035b886757ff4482cf6",
+       "model_id": "9f2f507921f047a1bd88d6cbc4a7c353",
        "version_major": 2,
        "version_minor": 0
       },
@@ -261,7 +261,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3921d8cc4b964af7aaf6879eedc50a80",
+       "model_id": "9c484efcf2334aeab6fbd9476a27ffac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -383,7 +383,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47f059942a4e4648be6aa7f3535ced39",
+       "model_id": "b5728a7c74664a139878ec87e189e3d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -417,7 +417,7 @@
     "\n",
     "# or a list of colors for each datapoint\n",
     "colors = [\"r\"] * 25 + [\"purple\"] * 25 + [\"y\"] * 25 + [\"b\"] * 25\n",
-    "sinc_graphic = plot_l.add_line(data=sinc, thickness=5, colors = colors, name=\"sync\")\n",
+    "sinc_graphic = plot_l.add_line(data=sinc, thickness=5, colors = colors, name=\"sinc\")\n",
     "\n",
     "plot_l.show(sidecar=True)"
    ]
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "93ff5cff-a573-40c6-af59-c40e5eacfa81",
    "metadata": {},
    "outputs": [],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "2efcea16-bc12-4d24-9211-ea3bea0d89ef",
    "metadata": {},
    "outputs": [],
@@ -462,19 +462,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "a81bce05-b4a8-455b-95b2-6fa563087b51",
    "metadata": {},
    "outputs": [],
    "source": [
     "# set cmap \n",
     "plot_l[\"sine\"].cmap = \"jet\"\n",
-    "plot_l[\"sync\"].cmap = \"viridis\""
+    "plot_l[\"sinc\"].cmap = \"viridis\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "69473735-3c24-4881-bbb2-13e760ea22ea",
    "metadata": {},
    "outputs": [],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "368abd6e-528b-412e-8be5-1d73aebd4b97",
    "metadata": {},
    "outputs": [],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "91a4b3be-d509-4782-a7f3-033dcfd30831",
    "metadata": {
     "tags": []
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "1102bdef-3851-44b4-b67d-23929e250bdc",
    "metadata": {},
    "outputs": [],
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "586ad593-718b-41e6-ba3d-ffc4d3711c09",
    "metadata": {},
    "outputs": [],
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "475caccd-076a-4e7e-a96a-6cc8dc59e4d8",
    "metadata": {},
    "outputs": [
@@ -547,7 +547,7 @@
        "(1309, 30, 512, 512)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,14 +566,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "b798e386-d583-4872-9a5b-e100b7a67f0b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c09e17ab182b4e97a4805024d4d48aa6",
+       "model_id": "4a78ac457d144f92bfe1ed8107fe0c4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -590,7 +590,7 @@
        "JupyterOutputContext(children=(JupyterWgpuCanvas(css_height='500px', css_width='600px'), IpywidgetToolBar(children=(Button(icon='expand-arrows-alt', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='auto-scale scene'), Button(icon='align-center', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='auto-center scene'), ToggleButton(value=True, icon='hand-pointer', layout=Layout(width='auto'), tooltip='panzoom controller'), ToggleButton(value=True, description='1:1', layout=Layout(width='auto'), style=ToggleButtonStyle(font_weight='bold'), tooltip='maintain aspect'), Button(icon='arrow-down', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='y-axis direction'), Button(icon='draw-polygon', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='add PolygonSelector'), ToggleButton(value=False, icon='video', layout=Layout(width='auto'), tooltip='record'), Dropdown(description='Subplots:', layout=Layout(width='200px'), options=('(0, 0)', '(0, 1)', '(0, 2)', '(0, 3)', '(0, 4)', '(0, 5)', '(1, 0)', '(1, 1)', '(1, 2)', '(1, 3)', '(1, 4)', '(1, 5)', '(2, 0)', '(2, 1)', '(2, 2)', '(2, 3)', '(2, 4)', '(2, 5)', '(3, 0)', '(3, 1)', '(3, 2)', '(3, 3)', '(3, 4)', '(3, 5)', '(4, 0)', '(4, 1)', '(4, 2)', '(4, 3)', '(4, 4)', '(4, 5)'), value='(0, 0)'))), IpywidgetImageWidgetToolbar(children=(HBox(children=(Button(icon='adjust', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='reset vmin/vmax'), Button(description='reset', icon='adjust', layout=Layout(width='auto'), style=ButtonStyle(), tooltip='reset vmin/vmax and reset histogram using current frame'), Play(value=0, description='play/pause', interval=10, max=1308), BoundedIntText(value=1, description='Step Size:', layout=Layout(width='150px'), max=1308, min=1, tooltip='set slider step'), BoundedIntText(value=100, description='Speed', layout=Layout(width='150px'), max=1000, min=1, step=50, tooltip='Playback speed, this is NOT framerate.\\nArbitrary units between 1 - 1,000'))), IntSlider(value=0, description='dimension: t', max=1308)))))"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "3e903b6b-6225-4485-8da0-8a46e6366e4f",
    "metadata": {},
    "outputs": [],
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "id": "df50ca13-7f40-4ee5-add8-6774f659b5eb",
    "metadata": {},
    "outputs": [],
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "id": "19c4b9cd-3ba8-4a3c-8733-efcd84c2f310",
    "metadata": {},
    "outputs": [],
@@ -745,7 +745,7 @@
     "tags": []
    },
    "source": [
-    "## For another demo, please see our talk from SciPy 2023:\n",
+    "## For a more diverse set of demos, please see our talk from SciPy 2023:\n",
     "\n",
     "- #### Repo: https://github.com/fastplotlib/fastplotlib-scipy2023\n",
     "\n",
