--- a/intro_demo.ipynb
+++ b/intro_demo.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "### 3. Widgets - high level widgets to make repetitive UIs easier\n",
     "- `ImageWidget`- n-dimensional widget for `Image` data\n",
-    "- Sliders, support window functions, `GridPlot`, etc."
+    "- Sliders, support window functions, etc."
    ]
   },
   {
@@ -92,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f2f507921f047a1bd88d6cbc4a7c353",
+       "model_id": "5ea46bcd77134990ab1aa80bb7903368",
        "version_major": 2,
        "version_minor": 0
       },
@@ -261,7 +261,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c484efcf2334aeab6fbd9476a27ffac",
+       "model_id": "db888d86f112425ba6d6d4cd2f765aec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -383,7 +383,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5728a7c74664a139878ec87e189e3d7",
+       "model_id": "f86fa8aaf6184fc18552b1b8d8343a1b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -442,17 +442,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "2efcea16-bc12-4d24-9211-ea3bea0d89ef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# more complex indexing, set the red value directly from an array\n",
-    "cosine_graphic.colors[65:90, 0] = np.linspace(0, 1, 90-65)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "fa43555e-976b-42d0-a65f-05c022366591",
    "metadata": {},
@@ -468,30 +457,7 @@
    "outputs": [],
    "source": [
     "# set cmap \n",
-    "plot_l[\"sine\"].cmap = \"jet\"\n",
-    "plot_l[\"sinc\"].cmap = \"viridis\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "69473735-3c24-4881-bbb2-13e760ea22ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set cmap values equal sine wave y-values \n",
-    "plot_l[\"sine\"].cmap.values = sine[:, 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "368abd6e-528b-412e-8be5-1d73aebd4b97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set cmap values equal to cosine wave y-values\n",
-    "plot_l[\"sine\"].cmap.values = cosine[:, 1]"
+    "plot_l[\"sine\"].cmap = \"jet\""
    ]
   },
   {
@@ -511,7 +477,7 @@
    "id": "4aff8894-de97-4ecf-9008-cbdfdee66b92",
    "metadata": {},
    "source": [
-    "## `ImageWidget` using zebrafish whole-brain data"
+    "## `ImageWidget` using 10GB zebrafish whole-brain data"
    ]
   },
   {
@@ -531,7 +497,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load in zebrafish data\n",
+    "# lazy load in zebrafish data\n",
     "movie = tifffile.memmap('/home/clewis7/repos/fastplotlib-scipy2023/fpl-scipy2023-data/neural_data/zfish_vol.tiff')"
    ]
   },
@@ -573,7 +539,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a78ac457d144f92bfe1ed8107fe0c4b",
+       "model_id": "eb2188ff5661497f92e1cc38fd57b9b0",
        "version_major": 2,
        "version_minor": 0
       },
