chage dims info for ImageWidget, line color cyan, added cmap.values

--- a/intro_demo.ipynb
+++ b/intro_demo.ipynb
@@ -34,7 +34,7 @@
     "- `GridPlot` - a grid of `Subplots`\n",
     "\n",
     "### 3. Widgets - high level widgets to make repetitive UIs easier\n",
-    "- `ImageWidget`- n-dimensional widget for `Image` data\n",
+    "- `ImageWidget`- widget for `Image` data with dims: `xy`, `txy`, `tzxy`\n",
     "- Sliders, support window functions, etc."
    ]
   },
@@ -69,7 +69,15 @@
    "execution_count": 2,
    "id": "05ff0e64-f770-4923-9238-17373604252e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "using: <jupyter_rfb._jpg.SimpleJpegEncoder object at 0x7f7145f52090>\n"
+     ]
+    }
+   ],
    "source": [
     "import fastplotlib as fpl\n",
     "import numpy as np"
@@ -92,7 +100,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ea46bcd77134990ab1aa80bb7903368",
+       "model_id": "86b404f0de8e413891bf6dbef3902c68",
        "version_major": 2,
        "version_minor": 0
       },
@@ -102,14 +110,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No config found!\n",
-      "No config found!\n"
-     ]
     },
     {
      "data": {
@@ -261,7 +261,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db888d86f112425ba6d6d4cd2f765aec",
+       "model_id": "b120a0b44da64046b422110b883cfc70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -276,7 +276,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/clewis7/repos/fastplotlib/fastplotlib/graphics/_features/_base.py:34: UserWarning: converting float64 array to float32\n",
+      "/home/kushal/repos/fastplotlib/fastplotlib/graphics/_features/_base.py:34: UserWarning: converting float64 array to float32\n",
       "  warn(f\"converting {array.dtype} array to float32\")\n"
      ]
     },
@@ -383,7 +383,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f86fa8aaf6184fc18552b1b8d8343a1b",
+       "model_id": "7071065eb9174fd19b5ccaff405b0fc0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -432,13 +432,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "93ff5cff-a573-40c6-af59-c40e5eacfa81",
    "metadata": {},
    "outputs": [],
    "source": [
     "# indexing of colors\n",
-    "cosine_graphic.colors[:40] = \"magenta\""
+    "cosine_graphic.colors[:40] = \"cyan\""
    ]
   },
   {
@@ -462,7 +462,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
+   "id": "77780aa7-320b-4eaa-b909-b3d94271a7c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# map cmap values\n",
+    "plot_l[\"sine\"].cmap.values = cosine[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "91a4b3be-d509-4782-a7f3-033dcfd30831",
    "metadata": {
     "tags": []
@@ -743,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
