--- a/neuro_demo.ipynb
+++ b/neuro_demo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "de8062db-f3fa-4fd5-b788-a6aafdc9dbaf",
    "metadata": {
     "tags": []
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "id": "3f4c4660-8430-4162-af75-4a1672e2d63f",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "51446cb4-d0c3-4fbc-8e87-df602d9a7783",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "bf414f11-2fc9-43c3-9856-f5818b051b1d",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "17d51e6f-a63c-4adf-85c1-41c2e24a9b00",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        " PosixPath('/data/kushal/cortex-learning/2p-trial-exps/eaf1/behavior/session4/eaf1-s4_side_v018.avi')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "658cdfd4-1a40-410a-b270-968c618bf99f",
    "metadata": {
     "tags": []
@@ -137,14 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "0ced10c9-d081-421e-bdd0-1129159f5ef3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76ef46f258744442a76356d67366bef8",
+       "model_id": "a1e3a8161c4a40fc9f4a949bde343653",
        "version_major": 2,
        "version_minor": 0
       },
@@ -166,7 +166,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6df091b6dde4850a6fa06010e132fbb",
+       "model_id": "0ac4552949e54af592dbb5e9f49ffb3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -174,7 +174,7 @@
        "JupyterOutputContext(children=(JupyterWgpuCanvas(), IpywidgetToolBar(children=(Button(icon='expand-arrows-alt'…"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "4003cd9a-85c9-4dc1-ab4c-ffc6262e0e7c",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "PosixPath('/data/kushal/cortex-learning/2p-trial-exps')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "id": "7a6863d5-41cc-44ed-b05a-0b622b616b6e",
    "metadata": {},
    "outputs": [
@@ -363,7 +363,7 @@
        "26  2023-01-23T21:02:48    542.55 sec  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "22cacb7c-300e-4c3f-bb76-49cf568ee9b5",
    "metadata": {
     "tags": []
@@ -399,12 +399,12 @@
    "id": "e137871a-edcc-4b85-a055-37760f8a0ed9",
    "metadata": {},
    "source": [
-    "#### Get the motion corrected and reconstructed movie"
+    "#### Get the motion corrected movie"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "5469fce7-dc6d-45d7-8ad4-660af2315f3b",
    "metadata": {},
    "outputs": [],
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "760aa1f1-fcb6-460c-9c34-e9ee5a19d1f2",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
        "       -0.1908793 , -0.05140921, -0.17028186,  0.16581392,  0.44946934])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "665ea49c-4a5d-4417-8095-320b35f203a2",
    "metadata": {},
    "outputs": [],
@@ -517,14 +517,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "663cbf0b-5e64-4188-a9c9-1ffa9dded2a1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb16bb0a7b524e44bc6fa7fb769a0a3e",
+       "model_id": "b5ad29ce92ee4c1da576aaff52058d56",
        "version_major": 2,
        "version_minor": 0
       },
@@ -538,7 +538,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b60c3c3782e45de8995b09eed3eb6a4",
+       "model_id": "a7f9047e171e40b8b8896bd5666c9e29",
        "version_major": 2,
        "version_minor": 0
       },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "543c0a90-d89d-4aeb-bfff-f91a982c594d",
    "metadata": {
     "tags": []
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "420813af-8468-4497-bbaa-a277e03938e8",
    "metadata": {},
    "outputs": [],
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "c87dad08-dc63-426c-83f0-4bc4a8fc622f",
    "metadata": {
     "tags": []
@@ -650,7 +650,8 @@
    "outputs": [],
    "source": [
     "plot_temporal.close()\n",
-    "raw_iw.close()"
+    "raw_iw.close()\n",
+    "sc.close()"
    ]
   },
   {
@@ -671,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "7dead909-b503-42f1-b3ba-a9cecaa09220",
    "metadata": {},
    "outputs": [],
@@ -689,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "59d28c3f-2366-4973-9e05-81c6b8b0ec1a",
    "metadata": {},
    "outputs": [],
@@ -699,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "ea3d3dd3-5064-4c13-8c6c-d20fcd359d58",
    "metadata": {},
    "outputs": [
@@ -709,7 +710,7 @@
        "(318850, 256, 336)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "9a1f220b-49ab-4440-a2e4-bcbf87f7cdc5",
    "metadata": {},
    "outputs": [],
@@ -747,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "b8eb3370-0cc1-4855-898b-a06be4c289b5",
    "metadata": {},
    "outputs": [],
@@ -758,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "ad16f013-3a6e-4901-ab75-4ea0e72ce38b",
    "metadata": {
     "tags": []
@@ -770,7 +771,7 @@
        "(318850,)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "662d958f-ed86-4719-a93c-dc5f11d698fa",
    "metadata": {
     "tags": []
@@ -793,7 +794,7 @@
        "637.7"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "1526620a-46a5-484a-b7f0-e40d22eb0c46",
    "metadata": {},
    "outputs": [],
@@ -822,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "34cdbfbd-6b58-4a7a-8268-8c1d7e8d5868",
    "metadata": {
     "tags": []
@@ -847,7 +848,7 @@
        "dtype: uint8, shape: (318850, 256, 336)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "0f326651-1bd5-46e1-b084-8135d1384304",
    "metadata": {},
    "outputs": [],
@@ -878,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "56112216-ffcc-438d-b7bf-deff06df9c8c",
    "metadata": {
     "tags": []
@@ -890,7 +891,7 @@
        "(9153,)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "dca71276-617e-406a-9cda-5ab6f64525f4",
    "metadata": {
     "tags": []
@@ -913,7 +914,7 @@
        "600.5353838886191"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "4247883f-bd19-49a0-8e4c-ce84b9d3eac6",
    "metadata": {},
    "outputs": [],
@@ -960,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 47,
    "id": "688330d7-7a02-4f90-8387-7c4acaa34665",
    "metadata": {
     "tags": []
@@ -969,7 +970,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b772805c479c40a5a204315c5da9fb36",
+       "model_id": "c8e32322c8bd474ea5bb52695e26a081",
        "version_major": 2,
        "version_minor": 0
       },
@@ -983,10 +984,10 @@
     {
      "data": {
       "text/plain": [
-       "<weakproxy at 0x7f8f45d8fa60 to ImageGraphic at 0x7f8f45ce8890>"
+       "<weakproxy at 0x7f8fd83278d0 to ImageGraphic at 0x7f8fd8018050>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,13 +1009,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 49,
    "id": "a15afa9a-fddf-4e26-9af8-0413f4284f97",
    "metadata": {},
    "outputs": [],
    "source": [
     "# This time will be in milliseconds\n",
-    "synced_time = IntSlider(min=0, max=22*19 * 1_000, description=\"ms\")\n",
+    "synced_time = IntSlider(min=0, max=22*19 * 1_000, description=\"ms\", layout=Layout(width=\"500\"))\n",
     "\n",
     "def update_time(change):\n",
     "    # get the index of synced slider\n",
@@ -1041,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 50,
    "id": "4858d09b-1dae-4501-8d2e-b33e8083063a",
    "metadata": {
     "tags": []
@@ -1065,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 51,
    "id": "f1df9cde-3d0d-47f8-81f9-f530fd24177a",
    "metadata": {
     "tags": []
@@ -1074,7 +1075,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d27c559402dc4bfcb6559bea38fcff90",
+       "model_id": "37794600f3044bfd817fb66fe937fa97",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1108,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 52,
    "id": "a9a80b64-619f-4321-9046-c51b3cf33be0",
    "metadata": {
     "tags": []
@@ -1120,7 +1121,7 @@
        "<function __main__.change_sync_slider_size(ev)>"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,14 +1165,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 53,
    "id": "040c3d22-797f-4144-8e19-cbbb53f53e34",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cfdc10c54a0845548330dca4058770d9",
+       "model_id": "86495ea597504362b1f84c10fa879542",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1179,7 +1180,7 @@
        "VBox(children=(JupyterOutputContext(children=(JupyterWgpuCanvas(), IpywidgetToolBar(children=(Button(icon='exp…"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 54,
    "id": "28382190-3b00-44b7-99d7-d74ab3b4990e",
    "metadata": {},
    "outputs": [],
@@ -1202,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42e4240e-673f-4363-baf6-0f880a24a1fd",
+   "id": "ecdd9e7a-468a-4a55-8d9c-ad6595e52c2d",
    "metadata": {},
    "outputs": [],
    "source": []
